More best-effort parse long (#3603)
* More best-effort parse long

* addressed comments